# ossm

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  TESTING.md  manifest.scm  pyproject.toml  setup.py  train.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/dataloader/: default.yaml
configs/dataset/: amazonbeauty.yaml  amazonsports.yaml  amazonvideogames.yaml  ml1m.yaml  ml25m.yaml  uea_coeff_train.yaml  yelp.yaml
configs/head/: classification.yaml  regression.yaml  tiedsoftmax.yaml
configs/model/: dlinoss.yaml  dlinoss_imex1.yaml  dlinossrec.yaml  linoss_im.yaml  lru.yaml  mambarec.yaml  ncde.yaml  rnn.yaml  s5.yaml  sdlinossrec.yaml
configs/optimizer/: adamw.yaml
configs/paths/: default.yaml
configs/test_dataset/: amazonbeauty.yaml  amazonsports.yaml  uea_coeff_test.yaml
configs/training/: classification.yaml  regression.yaml  seqrec.yaml
reports/: mamba4rec_cpu_config.yaml  mamba4rec_cpu_run.txt  mamba4rec_experiment.md  seqrec_sdlinossrec_amazonbeauty.md
scripts/: bench_dlinoss.py  benchmark_dlinoss.py  benchmark_linoss.py  benchmark_lru.py  benchmark_rnn.py  benchmark_s5.py  benchmark_sdlinoss.py  benchmark_selective_scan.py  inspect_seqrec.py  make_tables.py  prepare_amazon.py  prepare_ml1m.py  prepare_uea.py  prepare_yelp.py  refresh_dlinoss_goldens.py  refresh_mamba_goldens.py
tests/: dlinoss_reference_cases.json  test_cde_transform.py  test_collate.py  test_dataset_helpers.py  test_dataset_utils.py  test_dlinoss.py  test_dlinoss_kernels.py  test_dlinoss_parity.py  test_end_to_end_step.py  test_eval_masking.py  test_kernels_performance.py  test_linoss.py  test_linoss_parity.py  test_loader_utils.py  test_lru.py  test_mamba_reference_parity.py  test_mambarec.py  test_metrics_ranking.py  test_ncde.py  test_public_api.py  test_residual_ssm_block.py  test_rnn.py  test_s5.py  test_scan_parity.py  test_sdlinoss.py  test_sdlinoss_fast_ex_backward.py  test_sdlinoss_fast_ex_forward.py  test_sdlinoss_fast_im_backward.py  test_sdlinoss_fast_im_forward.py  test_sdlinoss_fast_im_xonly.py  test_sdlinoss_fast_imex1_backward.py  test_sdlinoss_fast_imex1_forward.py  test_sdlinoss_fast_imex2_backward.py  test_sdlinoss_fast_imex2_forward.py  test_sdlinoss_fast_memory.py  test_sdlinoss_fast_parity_all.py  test_sdlinoss_fast_xonly_ex_backward.py  test_sdlinoss_fast_xonly_ex_forward.py  test_sdlinoss_fast_xonly_imex1.py  test_sdlinoss_fast_xonly_imex2.py  (+10 more)
(+116 files in other folders)
