[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossm"
version = "0.1.1"
description = "OSS time-series datasets and transforms for RNN/SSM/NCDE/NRDE with torchsignature integration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "OSS Maintainers" }]

dependencies = [
  "torch>=2.1",
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "pandas>=1.5",
  "hydra-core>=1.3",
  "torchsignature @ git+https://github.com/b-vitamins/torchsignature",
]

[project.optional-dependencies]
uea = ["sktime>=0.21.0"]
signature = ["torchsignature @ git+https://github.com/b-vitamins/torchsignature"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pyright]
# Keep pyright focused on library code; tests may use patterns pyright dislikes.
include = ["src"]
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
