[build-system]
requires = [
  "setuptools>=68",
  "wheel",  # provides bdist_wheel for the ossm_kernels extension build
  "torch>=2.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "ossm"
version = "0.1.1"
description = "OSS time-series datasets and transforms for RNN/SSM/NCDE/NRDE with torchsignature integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OSS Maintainers" }]

dependencies = [
  "torch>=2.1",
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "pandas>=1.5",
  "hydra-core>=1.3",
  "torchcde>=0.2.5",
  "torchsignature @ git+https://github.com/b-vitamins/torchsignature",
]

[project.optional-dependencies]
uea = ["sktime>=0.21.0"]
signature = ["torchsignature @ git+https://github.com/b-vitamins/torchsignature"]
linoss = [
  "jax[cpu]>=0.4.30",
  "jaxlib>=0.4.30",
  "equinox>=0.11.0",
]
linoss-ref = [
  "damped-linoss @ git+https://github.com/jaredbmit/damped-linoss@617acacd7cbcd85a5969daae1cb4a9b36b028d06",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "performance: marks a benchmark-style regression guard",
  "cuda: denotes tests that require a CUDA-capable device",
]

[tool.pyright]
# Keep pyright focused on library code; tests may use patterns pyright dislikes.
include = ["src"]
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
